[package]
name = "redlight"
version = "0.1.0"
edition = "2021"
license = "ISC"
autotests = false

[features]
default = ["bb8", "validation"]
bb8 = ["dep:bb8-redis"]
deadpool = ["dep:deadpool-redis"]
validation = ["dep:bytecheck", "rkyv/validation"]
cold_resume = ["dep:twilight-gateway"]
metrics = ["dep:metrics"]

[dependencies]
bb8-redis = { version = "0.13", default-features = false, optional = true }
bytecheck = { version = "0.7", default-features = false, optional = true }
deadpool-redis = { version = "0.12", default-features = false, optional = true, features = ["rt_tokio_1"]}
futures-util = { version = "0.3", default-features = false, features = ["std"] }
itoa = { version = "1.0", default-features = false }
metrics = { version = "0.21", default-features = false, optional = true }
pin-project = { version = "1.1", default-features = false }
rkyv = { version = "0.7", default-features = false, features = ["size_32", "std", "strict"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
twilight-gateway = { version = "0.15", default-features = false, optional = true }
twilight-model = { version = "0.15", default-features = false }

[dev-dependencies]
dotenvy = { version = "0.15" }
serial_test = { version = "2.0", default-features = false, features = ["async", "file_locks"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
twilight-gateway = { version = "0.15", default-features = false }

[[test]]
name = "integration"
path = "tests/base.rs"

[package.metadata.docs.rs]
# document these features
features = ["bb8", "validation", "cold_resume", "metrics"]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]